--- a/app/src/main/res/layout-notnight-xxxhdpi/activity_train_avtivity.xml
+++ b/app/src/main/res/layout-notnight-xxxhdpi/activity_train_avtivity.xml
@@ -1,6 +1,410 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <Button
+        android:id="@+id/pass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:onClick="turn_pass"
+        android:text="パス"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/button_end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="40dp"
+        android:onClick="save_neuron"
+        android:text="Save"
+        app:layout_constraintBottom_toTopOf="@+id/PLAYER_turn"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/COM2_turn"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/divider4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/divider2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/frame_style" />
+
+    <ImageView
+        android:id="@+id/COM1_turn"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/divider4"
+        app:layout_constraintEnd_toStartOf="@+id/divider2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/frame_style" />
+
+    <ImageView
+        android:id="@+id/COM3_turn"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/divider3"
+        app:layout_constraintEnd_toStartOf="@+id/divider2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider4"
+        app:srcCompat="@drawable/frame_style" />
+
+    <ImageView
+        android:id="@+id/COM4_turn"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/divider3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/divider2"
+        app:layout_constraintTop_toBottomOf="@+id/divider4"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/frame_style" />
+
+    <ImageView
+        android:id="@+id/PLAYER_turn"
+        android:layout_width="409dp"
+        android:layout_height="187dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider"
+        app:srcCompat="@drawable/frame_style" />
+
+    <TextView
+        android:id="@+id/man0_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="状態"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintBottom_toBottomOf="@+id/man0_name"
+        app:layout_constraintEnd_toStartOf="@+id/pass" />
+
+    <TextView
+        android:id="@+id/man4_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="状態"
+        app:layout_constraintBottom_toBottomOf="@+id/man3_status"
+        app:layout_constraintEnd_toEndOf="@+id/man2_status" />
+
+    <TextView
+        android:id="@+id/man2_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="状態"
+        app:layout_constraintBottom_toBottomOf="@+id/man1_status"
+        app:layout_constraintEnd_toEndOf="@+id/COM2_turn" />
+
+    <TextView
+        android:id="@+id/man4_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="COM4の名前"
+        app:layout_constraintBottom_toBottomOf="@+id/man3_name"
+        app:layout_constraintStart_toStartOf="@+id/man2_name" />
+
+    <TextView
+        android:id="@+id/player_card_in_hand_0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="16dp"
+        android:clickable="true"
+        android:longClickable="true"
+        android:text="1枚目"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider" />
+
+    <TextView
+        android:id="@+id/player_card_in_hand_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:longClickable="true"
+        android:text="2枚目"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_0"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_0" />
+
+    <TextView
+        android:id="@+id/player_card_in_hand_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:longClickable="true"
+        android:text="3枚目"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_1"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_1" />
+
+    <TextView
+        android:id="@+id/player_card_in_hand_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:longClickable="true"
+        android:text="4枚目"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_2"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_2" />
+
+    <TextView
+        android:id="@+id/player_card_in_hand_5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:longClickable="true"
+        android:text="6枚目"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_4"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_4" />
+
+    <TextView
+        android:id="@+id/player_card_in_hand_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:clickable="true"
+        android:longClickable="true"
+        android:text="5枚目"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toStartOf="@+id/player_card_in_hand_0"
+        app:layout_constraintTop_toBottomOf="@+id/player_card_in_hand_0" />
+
+    <TextView
+        android:id="@+id/player_card_in_hand_6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:longClickable="true"
+        android:text="7枚目"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_5"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_5" />
+
+    <TextView
+        android:id="@+id/player_card_in_hand_7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:longClickable="true"
+        android:text="8枚目"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_6"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_6" />
+
+    <TextView
+        android:id="@+id/player_card_in_hand_8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:clickable="true"
+        android:longClickable="true"
+        android:text="9枚目"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toStartOf="@+id/player_card_in_hand_4"
+        app:layout_constraintTop_toBottomOf="@+id/player_card_in_hand_4" />
+
+    <TextView
+        android:id="@+id/player_card_in_hand_9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:longClickable="true"
+        android:text="10枚目"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_8"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_8" />
+
+    <TextView
+        android:id="@+id/player_card_in_hand_10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:longClickable="true"
+        android:text="11枚目"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toEndOf="@+id/player_card_in_hand_9"
+        app:layout_constraintTop_toTopOf="@+id/player_card_in_hand_9" />
+
+    <TextView
+        android:id="@+id/COM1_card"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="32dp"
+        android:text="0枚"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/divider2" />
+
+    <TextView
+        android:id="@+id/COM2_card"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginLeft="25dp"
+        android:text="0枚"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toEndOf="@+id/divider2"
+        app:layout_constraintTop_toTopOf="@+id/COM1_card" />
+
+    <TextView
+        android:id="@+id/COM3_card"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="0枚"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toStartOf="@+id/COM1_card"
+        app:layout_constraintTop_toBottomOf="@+id/divider4" />
+
+    <TextView
+        android:id="@+id/COM4_card"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0枚"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toStartOf="@+id/COM2_card"
+        app:layout_constraintTop_toTopOf="@+id/COM3_card" />
+
+    <TextView
+        android:id="@+id/field"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:text="場のカード"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toTopOf="@+id/divider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider3" />
+
+    <TextView
+        android:id="@+id/man0_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginBottom="8dp"
+        android:text="プレイヤー0の名前"
+        app:layout_constraintBottom_toBottomOf="@+id/PLAYER_turn"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/man1_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="17dp"
+        android:layout_marginLeft="17dp"
+        android:layout_marginBottom="8dp"
+        android:text="COM1の名前"
+        app:layout_constraintBottom_toBottomOf="@+id/COM1_turn"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/man2_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="17dp"
+        android:layout_marginLeft="17dp"
+        android:text="COM2の名前"
+        app:layout_constraintStart_toEndOf="@+id/COM3_turn"
+        app:layout_constraintTop_toTopOf="@+id/man1_name" />
+
+    <TextView
+        android:id="@+id/man3_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="COM3の名前"
+        app:layout_constraintBottom_toBottomOf="@+id/COM3_turn"
+        app:layout_constraintStart_toStartOf="@+id/man1_name" />
+
+    <TextView
+        android:id="@+id/man1_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="16dp"
+        android:text="状態"
+        app:layout_constraintBottom_toBottomOf="@+id/COM1_turn"
+        app:layout_constraintEnd_toStartOf="@+id/COM2_turn" />
+
+    <TextView
+        android:id="@+id/man3_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="状態"
+        app:layout_constraintBottom_toBottomOf="@+id/COM3_turn"
+        app:layout_constraintEnd_toEndOf="@+id/man1_status" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="409dp"
+        android:layout_height="1dp"
+        android:layout_marginBottom="187dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/divider3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="260dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="409dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginBottom="130dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="@+id/divider2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
