--- a/app/src/main/res/layout/activity_select_activity2.xml
+++ b/app/src/main/res/layout/activity_select_activity2.xml
@@ -41,7 +41,7 @@
         app:srcCompat="@drawable/robot_full_sigmoid" />
 
     <ImageView
-        android:id="@+id/robot_genetic_img"
+        android:id="@+id/robot_manyneurons_img"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="75dp"
@@ -50,7 +50,7 @@
         android:clickable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/robot_full_sigmoid_img"
-        app:srcCompat="@drawable/robot_genetic" />
+        app:srcCompat="@drawable/robot_manyneurons" />
 
     <ImageView
         android:id="@+id/robot_select_img"
@@ -60,7 +60,7 @@
         android:layout_marginRight="75dp"
         android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/robot_genetic_img"
+        app:layout_constraintTop_toTopOf="@+id/robot_manyneurons_img"
         app:srcCompat="@drawable/robot_select" />
 
     <ImageView
@@ -98,14 +98,14 @@
         app:srcCompat="@drawable/selectable_underline" />
 
     <ImageView
-        android:id="@+id/frame_robot_genetic"
+        android:id="@+id/frame_robot_manyneurons"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/robot_genetic_img"
-        app:layout_constraintEnd_toEndOf="@+id/robot_genetic_img"
-        app:layout_constraintStart_toStartOf="@+id/robot_genetic_img"
-        app:layout_constraintTop_toTopOf="@+id/robot_genetic_img"
+        app:layout_constraintBottom_toBottomOf="@+id/robot_manyneurons_img"
+        app:layout_constraintEnd_toEndOf="@+id/robot_manyneurons_img"
+        app:layout_constraintStart_toStartOf="@+id/robot_manyneurons_img"
+        app:layout_constraintTop_toTopOf="@+id/robot_manyneurons_img"
         app:srcCompat="@drawable/selectable_underline" />
 
     <ImageView
