get screen size

--- a/app/src/main/res/layout-keyssoft/activity_status_avtivity.xml
+++ b/app/src/main/res/layout-keyssoft/activity_status_avtivity.xml
@@ -7,6 +7,7 @@
     tools:ignore="MissingDefaultResource">
 
     <com.example.suijaku.StatusDraw
+        android:id="@+id/statusDraw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
@@ -14,4 +15,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
