--- a/app/src/main/res/layout/activity_status_avtivity3.xml
+++ b/app/src/main/res/layout/activity_status_avtivity3.xml
@@ -22,7 +22,9 @@
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginBottom="30dp"
+        android:onClick="del_nnbs"
         android:text="DELETE NNBSelect"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -33,6 +35,7 @@
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="30dp"
+        android:onClick="del_manyn"
         android:text="DELETE Manyneurons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
